--- a/LIG4Jogo/bin/com/lig4/view/view.fxml
+++ b/LIG4Jogo/bin/com/lig4/view/view.fxml
@@ -33,18 +33,19 @@
 -->
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lig4.main.MainController">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="422.0" prefWidth="654.0" style="-fx-background-size: 800;" VBox.vgrow="ALWAYS">
          <children>
             <Pane maxWidth="640.0" prefHeight="400.0" prefWidth="640.0" style="-fx-background-color: #0066CC; -fx-background-size: 800;">
                <children>
-                  <Button layoutX="260.0" layoutY="200.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="121.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-border-radius: 20; -fx-background-radius: 20; -fx-border-width: 2;" text="Iniciar" textFill="WHITE">
+                  <Button layoutX="260.0" layoutY="200.0" mnemonicParsing="false" onAction="#btIniciarAction" prefHeight="45.0" prefWidth="121.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-border-radius: 20; -fx-background-radius: 20; -fx-border-width: 2;" text="Iniciar" textFill="WHITE">
                      <font>
                         <Font name="Trebuchet MS" size="19.0" />
                      </font>
@@ -54,11 +55,16 @@
                         <Font name="Trebuchet MS" size="19.0" />
                      </font>
                   </Button>
-                  <Button layoutX="260.0" layoutY="323.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="121.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-background-radius: 20; -fx-border-radius: 20; -fx-border-width: 2;" text="Sair" textFill="WHITE">
+                  <Button layoutX="260.0" layoutY="323.0" mnemonicParsing="false" onAction="#btSairAction" prefHeight="45.0" prefWidth="121.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-background-radius: 20; -fx-border-radius: 20; -fx-border-width: 2;" text="Sair" textFill="WHITE">
                      <font>
                         <Font name="Trebuchet MS" size="19.0" />
                      </font>
                   </Button>
+                  <Label layoutX="255.0" layoutY="42.0" prefHeight="75.0" prefWidth="131.0" text="LIG 4 " textFill="WHITE">
+                     <font>
+                        <Font size="52.0" />
+                     </font>
+                  </Label>
                </children>
             </Pane>
          </children>
