--- a/LIG4Jogo/src/com/lig4/view/tabuleiro.fxml
+++ b/LIG4Jogo/src/com/lig4/view/tabuleiro.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -11,7 +13,10 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="485.0" prefWidth="674.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lig4.main.tabuleiroController">
    <children>
-      <Pane prefHeight="200.0" prefWidth="200.0" />
+      <Pane prefHeight="200.0" prefWidth="200.0">
+         <children>
+            <ButtonBar layoutX="40.0" prefHeight="40.0" prefWidth="200.0" />
+         </children></Pane>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#095194" height="423.0" layoutX="24.0" layoutY="27.0" stroke="BLACK" strokeType="INSIDE" width="631.0" />
       <GridPane hgap="2.0" layoutX="25.0" layoutY="34.0" prefHeight="404.0" prefWidth="631.0" vgap="5.0">
         <columnConstraints>
@@ -248,5 +253,12 @@
             </StackPane>
          </children>
       </GridPane>
+      <Button layoutX="30.0" layoutY="26.0" mnemonicParsing="false" prefHeight="423.0" prefWidth="82.0" text="Button" />
+    <Button layoutX="117.0" layoutY="27.0" mnemonicParsing="false" prefHeight="423.0" prefWidth="75.0" text="Button" />
+      <Button layoutX="195.0" layoutY="26.0" mnemonicParsing="false" prefHeight="423.0" prefWidth="96.0" text="Button" />
+      <Button layoutX="295.0" layoutY="27.0" mnemonicParsing="false" prefHeight="423.0" prefWidth="82.0" text="Button" />
+      <Button layoutX="385.0" layoutY="27.0" mnemonicParsing="false" prefHeight="423.0" prefWidth="89.0" text="Button" />
+      <Button layoutX="480.0" layoutY="27.0" mnemonicParsing="false" prefHeight="423.0" prefWidth="82.0" text="Button" />
+      <Button layoutX="570.0" layoutY="29.0" mnemonicParsing="false" prefHeight="423.0" prefWidth="82.0" text="Button" />
    </children>
 </AnchorPane>
