--- a/LIG4Jogo/bin/com/lig4/view/nomes.fxml
+++ b/LIG4Jogo/bin/com/lig4/view/nomes.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
@@ -12,19 +14,24 @@
    <children>
       <Pane maxWidth="640.0" prefHeight="400.0" prefWidth="640.0" style="-fx-background-color: #0066CC; -fx-background-size: 800;">
          <children>
-            <Label layoutX="227.0" layoutY="55.0" prefHeight="34.0" prefWidth="187.0" text="Informe os nomes" textAlignment="JUSTIFY" textFill="WHITE">
+            <ImageView fitHeight="400.0" fitWidth="683.0" opacity="0.04" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../../Imagens/wallpaper-jogo.jpg" />
+               </image>
+            </ImageView>
+            <Label layoutX="220.0" layoutY="59.0" prefHeight="30.0" prefWidth="202.0" text="Informe os nomes" textAlignment="JUSTIFY" textFill="WHITE">
                <font>
-                  <Font size="23.0" />
+                  <Font name="System Bold" size="23.0" />
                </font>
             </Label>
             <Label layoutX="91.0" layoutY="148.0" text="Jogador 1:" textFill="#fffefe">
                <font>
-                  <Font size="20.0" />
+                  <Font name="System Bold" size="20.0" />
                </font>
             </Label>
             <Label layoutX="91.0" layoutY="223.0" text="Jogador 2:" textFill="#fffefe">
                <font>
-                  <Font size="20.0" />
+                  <Font name="System Bold" size="20.0" />
                </font>
             </Label>
             <Button layoutX="260.0" layoutY="304.0" mnemonicParsing="false" onAction="#btIniciarAction" prefHeight="45.0" prefWidth="121.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-border-radius: 20; -fx-background-radius: 20; -fx-border-width: 2;" text="Iniciar" textFill="WHITE">
