--- a/LIG4Jogo/src/com/lig4/view/modo_jogo.fxml
+++ b/LIG4Jogo/src/com/lig4/view/modo_jogo.fxml
@@ -3,6 +3,8 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
@@ -11,6 +13,11 @@
    <children>
       <Pane maxWidth="640.0" prefHeight="400.0" prefWidth="640.0" style="-fx-background-color: #0066CC; -fx-background-size: 800;">
          <children>
+            <ImageView fitHeight="400.0" fitWidth="709.0" layoutY="1.0" opacity="0.04" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../../Imagens/wallpaper-jogo.jpg" />
+               </image>
+            </ImageView>
             <Button layoutX="191.0" layoutY="120.0" mnemonicParsing="false" onAction="#btClassico" prefHeight="45.0" prefWidth="259.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-border-radius: 20; -fx-background-radius: 20; -fx-border-width: 2;" text="Clássico" textFill="WHITE">
                <font>
                   <Font name="Trebuchet MS" size="19.0" />
@@ -37,7 +44,7 @@
             </Button>
             <Label layoutX="191.0" layoutY="46.0" prefHeight="34.0" prefWidth="259.0" text="Escolha o modo de jogo" textAlignment="JUSTIFY" textFill="WHITE">
                <font>
-                  <Font size="23.0" />
+                  <Font name="System Bold" size="23.0" />
                </font>
             </Label>
          </children>
