--- a/LIG4Jogo/src/com/lig4/view/view.fxml
+++ b/LIG4Jogo/src/com/lig4/view/view.fxml
@@ -34,10 +34,12 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
 <VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lig4.main.MainController">
@@ -46,6 +48,11 @@
          <children>
             <Pane maxWidth="640.0" prefHeight="400.0" prefWidth="640.0" style="-fx-background-color: #0066CC; -fx-background-size: 800;">
                <children>
+                  <ImageView fitHeight="407.0" fitWidth="750.0" opacity="0.06" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../../../../../../Imagens/wallpaper-jogo.jpg" />
+                     </image>
+                  </ImageView>
                   <Button layoutX="260.0" layoutY="200.0" mnemonicParsing="false" onAction="#btIniciarAction" prefHeight="45.0" prefWidth="121.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-border-radius: 20; -fx-background-radius: 20; -fx-border-width: 2;" text="Iniciar" textFill="WHITE">
                      <font>
                         <Font name="Trebuchet MS" size="19.0" />
@@ -70,11 +77,15 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Label layoutX="255.0" layoutY="42.0" prefHeight="75.0" prefWidth="131.0" text="LIG 4 " textFill="WHITE">
-                     <font>
-                        <Font size="52.0" />
-                     </font>
-                  </Label>
+                  <ImageView fitHeight="131.0" fitWidth="314.0" layoutX="173.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../../../../../../Imagens/TelaSAM/logoJogo.png" />
+                     </image>
+                  </ImageView>
+                  <Circle fill="#ffcc00" layoutX="260.0" layoutY="164.0" radius="12.0" stroke="#ffcc00" strokeType="INSIDE" />
+                  <Circle fill="#ffcc00" layoutX="296.0" layoutY="164.0" radius="12.0" stroke="#ffcc00" strokeType="INSIDE" />
+                  <Circle fill="#ffcc00" layoutX="333.0" layoutY="164.0" radius="12.0" stroke="#ffcc00" strokeType="INSIDE" />
+                  <Circle fill="#ffcc00" layoutX="369.0" layoutY="164.0" radius="12.0" stroke="#ffcc00" strokeType="INSIDE" />
                </children>
             </Pane>
          </children>
