--- a/LIG4Jogo/bin/com/lig4/view/tabuleiro.fxml
+++ b/LIG4Jogo/bin/com/lig4/view/tabuleiro.fxml
@@ -38,7 +38,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <StackPane GridPane.columnIndex="0" GridPane.rowIndex="0">
+            <StackPane prefHeight="14.0" prefWidth="26.0" GridPane.columnIndex="0" GridPane.rowIndex="0">
                <children>
                   <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
@@ -83,7 +83,7 @@
                   <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
-            <StackPane GridPane.columnIndex="2"  GridPane.rowIndex="0">
+            <StackPane GridPane.columnIndex="2" GridPane.rowIndex="0">
                <children>
                   <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
