--- a/LIG4Jogo/bin/com/lig4/view/tabuleiro.fxml
+++ b/LIG4Jogo/bin/com/lig4/view/tabuleiro.fxml
@@ -254,31 +254,31 @@
             </StackPane>
          </children>
       </GridPane>
-      <Button fx:id="button1" layoutX="30.0" layoutY="26.0" mnemonicParsing="false" onMouseClicked="#btEscolherColuna" opacity="0.0" prefHeight="423.0" prefWidth="75.0" text="Button">
+      <Button fx:id="button1" layoutX="30.0" layoutY="26.0" mnemonicParsing="false" onMouseClicked="#btEscolherColuna" onMouseEntered="#btColorir" onMouseExited="#btDescolorir" opacity="0.0" prefHeight="423.0" prefWidth="75.0" style="-fx-background-color: #13C434;">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
-    <Button fx:id="button2" layoutX="117.0" layoutY="27.0" mnemonicParsing="false" onMouseClicked="#btEscolherColuna" opacity="0.0" prefHeight="423.0" prefWidth="75.0" text="Button">
+    <Button fx:id="button2" layoutX="117.0" layoutY="27.0" mnemonicParsing="false" onMouseClicked="#btEscolherColuna" onMouseEntered="#btColorir" onMouseExited="#btDescolorir" opacity="0.0" prefHeight="423.0" prefWidth="75.0" style="-fx-background-color: #13C434;">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
-      <Button fx:id="button3" layoutX="209.0" layoutY="26.0" mnemonicParsing="false" onMouseClicked="#btEscolherColuna" opacity="0.0" prefHeight="423.0" prefWidth="75.0" text="Button">
+      <Button fx:id="button3" layoutX="209.0" layoutY="26.0" mnemonicParsing="false" onMouseClicked="#btEscolherColuna" onMouseEntered="#btColorir" onMouseExited="#btDescolorir" opacity="0.0" prefHeight="423.0" prefWidth="75.0" style="-fx-background-color: #13C434;">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
-      <Button fx:id="button4" layoutX="302.0" layoutY="27.0" mnemonicParsing="false" onMouseClicked="#btEscolherColuna" opacity="0.0" prefHeight="423.0" prefWidth="75.0" text="Button">
+      <Button fx:id="button4" layoutX="302.0" layoutY="27.0" mnemonicParsing="false" onMouseClicked="#btEscolherColuna" onMouseEntered="#btColorir" onMouseExited="#btDescolorir" opacity="0.0" prefHeight="423.0" prefWidth="75.0" style="-fx-background-color: #13C434;">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
-      <Button fx:id="button5" layoutX="392.0" layoutY="27.0" mnemonicParsing="false" onMouseClicked="#btEscolherColuna" opacity="0.0" prefHeight="423.0" prefWidth="75.0" text="Button">
+      <Button fx:id="button5" layoutX="392.0" layoutY="27.0" mnemonicParsing="false" onMouseClicked="#btEscolherColuna" onMouseEntered="#btColorir" onMouseExited="#btDescolorir" opacity="0.0" prefHeight="423.0" prefWidth="75.0" style="-fx-background-color: #13C434;">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
-      <Button fx:id="button6" layoutX="480.0" layoutY="27.0" mnemonicParsing="false" onMouseClicked="#btEscolherColuna" opacity="0.0" prefHeight="423.0" prefWidth="75.0" text="Button">
+      <Button fx:id="button6" layoutX="480.0" layoutY="27.0" mnemonicParsing="false" onMouseClicked="#btEscolherColuna" onMouseEntered="#btColorir" onMouseExited="#btDescolorir" opacity="0.0" prefHeight="423.0" prefWidth="75.0" style="-fx-background-color: #13C434;">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
-      <Button fx:id="button7" layoutX="570.0" layoutY="29.0" mnemonicParsing="false" onMouseClicked="#btEscolherColuna" opacity="0.0" prefHeight="423.0" prefWidth="75.0" text="Button">
+      <Button fx:id="button7" layoutX="570.0" layoutY="29.0" mnemonicParsing="false" onMouseClicked="#btEscolherColuna" onMouseEntered="#btColorir" onMouseExited="#btDescolorir" opacity="0.0" prefHeight="423.0" prefWidth="75.0" style="-fx-background-color: #13C434;">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
