--- a/LIG4Jogo/src/com/lig4/view/modo_jogo.fxml
+++ b/LIG4Jogo/src/com/lig4/view/modo_jogo.fxml
@@ -2,51 +2,68 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lig4.main.modoJogoController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lig4.main.modoJogoController">
    <children>
-      <Pane maxWidth="640.0" prefHeight="400.0" prefWidth="640.0" style="-fx-background-color: #0066CC; -fx-background-size: 800;">
+      <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" style="-fx-background-color: #0066CC; -fx-background-size: 800;">
          <children>
-            <ImageView fitHeight="400.0" fitWidth="709.0" layoutY="1.0" opacity="0.04" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="565.0" fitWidth="809.0" layoutX="-4.0" layoutY="-3.0" opacity="0.04" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@wallpaper-jogo.jpg" />
+                  <Image url="@Wallpaper.jpg" />
                </image>
             </ImageView>
-            <Button layoutX="191.0" layoutY="120.0" mnemonicParsing="false" onAction="#btClassico" prefHeight="45.0" prefWidth="259.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-border-radius: 20; -fx-background-radius: 20; -fx-border-width: 2;" text="Clássico" textFill="WHITE">
+            <Button alignment="CENTER" layoutX="275.0" layoutY="285.0" mnemonicParsing="false" onAction="#btClassico" prefHeight="49.0" prefWidth="259.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-border-radius: 20; -fx-background-radius: 20; -fx-border-width: 3;" text="Clássico" textAlignment="CENTER" textFill="WHITE">
                <font>
-                  <Font name="Trebuchet MS" size="19.0" />
+                  <Font name="Trebuchet MS" size="24.0" />
                </font>
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button layoutX="191.0" layoutY="187.0" mnemonicParsing="false" onAction="#btTurbo" prefHeight="45.0" prefWidth="259.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-background-radius: 20; -fx-border-radius: 20; -fx-border-width: 2;" text="Turbo" textFill="WHITE">
+            <Button alignment="CENTER" layoutX="275.0" layoutY="366.0" mnemonicParsing="false" onAction="#btTurbo" prefHeight="45.0" prefWidth="259.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-background-radius: 20; -fx-border-radius: 20; -fx-border-width: 3;" text="Turbo" textAlignment="CENTER" textFill="WHITE">
                <font>
-                  <Font name="Trebuchet MS" size="19.0" />
+                  <Font name="Trebuchet MS" size="24.0" />
                </font>
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button layoutX="191.0" layoutY="256.0" mnemonicParsing="false" onAction="#btTurboMalucoAction" prefHeight="45.0" prefWidth="259.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-background-radius: 20; -fx-border-radius: 20; -fx-border-width: 2;" text="Turbo Maluco" textFill="WHITE">
+            <Button alignment="CENTER" layoutX="275.0" layoutY="446.0" mnemonicParsing="false" onAction="#btTurboMalucoAction" prefHeight="45.0" prefWidth="259.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-background-radius: 20; -fx-border-radius: 20; -fx-border-width: 3;" text="Turbo Maluco" textAlignment="CENTER" textFill="WHITE">
                <font>
-                  <Font name="Trebuchet MS" size="19.0" />
+                  <Font name="Trebuchet MS" size="24.0" />
                </font>
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Label layoutX="191.0" layoutY="46.0" prefHeight="34.0" prefWidth="259.0" text="Escolha o modo de jogo" textAlignment="JUSTIFY" textFill="WHITE">
+            <ImageView fitHeight="132.0" fitWidth="338.0" layoutX="255.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@logoJogo.png" />
+               </image>
+            </ImageView>
+            <Circle fill="#ffcc00" layoutX="331.0" layoutY="169.0" radius="13.0" stroke="#ffcc00" strokeType="INSIDE" />
+            <Circle fill="#ffcc00" layoutX="429.0" layoutY="169.0" radius="13.0" stroke="#ffcc00" strokeType="INSIDE" />
+            <Circle fill="#ffcc00" layoutX="380.0" layoutY="169.0" radius="13.0" stroke="#ffcc00" strokeType="INSIDE" />
+            <Circle fill="#ffcc00" layoutX="478.0" layoutY="169.0" radius="13.0" stroke="#ffcc00" strokeType="INSIDE" />
+            <Button layoutX="695.0" layoutY="18.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="82.0" style="-fx-background-color: #FF1A1A;" text="Voltar" textFill="WHITE">
                <font>
-                  <Font name="System Bold" size="23.0" />
+                  <Font size="18.0" />
                </font>
-            </Label>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <ImageView fitHeight="49.0" fitWidth="492.0" layoutX="185.0" layoutY="205.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@tituloModo.png" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
    </children>
