--- a/LIG4Jogo/src/com/lig4/view/turbo_maluco.fxml
+++ b/LIG4Jogo/src/com/lig4/view/turbo_maluco.fxml
@@ -1,35 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lig4.main.modoTurboMalucoController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lig4.main.modoTurboMalucoController">
    <children>
-      <Pane maxWidth="640.0" prefHeight="400.0" prefWidth="640.0" style="-fx-background-color: #0066CC; -fx-background-size: 800;">
+      <Pane maxWidth="858.0" prefHeight="550.0" prefWidth="858.0" style="-fx-background-color: #0066CC; -fx-background-size: 800;">
          <children>
-            <Button layoutX="213.0" layoutY="120.0" mnemonicParsing="false" onAction="#btDorDeCabeca" prefHeight="45.0" prefWidth="259.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-border-radius: 20; -fx-background-radius: 20; -fx-border-width: 2;" text="Dor de cabeça" textFill="WHITE">
+            <ImageView fitHeight="572.0" fitWidth="883.0" opacity="0.04" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@wallpaper-jogo.jpg" />
+               </image>
+            </ImageView>
+            <Button layoutX="274.0" layoutY="292.0" mnemonicParsing="false" onAction="#btDorDeCabeca" prefHeight="52.0" prefWidth="259.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-border-radius: 20; -fx-background-radius: 20; -fx-border-width: 3;" text="Dor de cabeça" textFill="WHITE">
                <font>
-                  <Font name="Trebuchet MS" size="19.0" />
+                  <Font name="Trebuchet MS" size="22.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
-            <Button layoutX="213.0" layoutY="184.0" mnemonicParsing="false" onAction="#btTarjaPreta" prefHeight="45.0" prefWidth="259.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-background-radius: 20; -fx-border-radius: 20; -fx-border-width: 2;" text="Tarja preta" textFill="WHITE">
+            <Button layoutX="274.0" layoutY="362.0" mnemonicParsing="false" onAction="#btTarjaPreta" prefHeight="52.0" prefWidth="259.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-background-radius: 20; -fx-border-radius: 20; -fx-border-width: 3;" text="Tarja preta" textFill="WHITE">
                <font>
-                  <Font name="Trebuchet MS" size="19.0" />
+                  <Font name="Trebuchet MS" size="22.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
-            <Button layoutX="213.0" layoutY="245.0" mnemonicParsing="false" onAction="#btHospicio" prefHeight="45.0" prefWidth="259.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-background-radius: 20; -fx-border-radius: 20; -fx-border-width: 2;" text="Hospício" textFill="WHITE">
+            <Button layoutX="274.0" layoutY="433.0" mnemonicParsing="false" onAction="#btHospicio" prefHeight="52.0" prefWidth="259.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-background-radius: 20; -fx-border-radius: 20; -fx-border-width: 3;" text="Hospício" textFill="WHITE">
                <font>
-                  <Font name="Trebuchet MS" size="19.0" />
+                  <Font name="Trebuchet MS" size="22.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
-            <Label layoutX="213.0" layoutY="46.0" prefHeight="34.0" prefWidth="311.0" text="Escolha nível de maluquice" textAlignment="JUSTIFY" textFill="WHITE">
-               <font>
-                  <Font size="23.0" />
-               </font>
-            </Label>
+            <ImageView fitHeight="132.0" fitWidth="338.0" layoutX="255.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@logoJogo.png" />
+               </image>
+            </ImageView>
+            <Circle fill="#ffcc00" layoutX="341.0" layoutY="179.0" radius="13.0" stroke="#ffcc00" strokeType="INSIDE" />
+            <Circle fill="#ffcc00" layoutX="439.0" layoutY="179.0" radius="13.0" stroke="#ffcc00" strokeType="INSIDE" />
+            <Circle fill="#ffcc00" layoutX="390.0" layoutY="179.0" radius="13.0" stroke="#ffcc00" strokeType="INSIDE" />
+            <Circle fill="#ffcc00" layoutX="488.0" layoutY="179.0" radius="13.0" stroke="#ffcc00" strokeType="INSIDE" />
+            <ImageView fitHeight="45.0" fitWidth="561.0" layoutX="134.0" layoutY="215.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@tituloMaluquice.png" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
    </children>
