--- a/LIG4Jogo/src/com/lig4/view/modo_jogo.fxml
+++ b/LIG4Jogo/src/com/lig4/view/modo_jogo.fxml
@@ -15,7 +15,7 @@
          <children>
             <ImageView fitHeight="565.0" fitWidth="809.0" layoutX="-4.0" layoutY="-3.0" opacity="0.04" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@Wallpaper.jpg" />
+                  <Image url="@resources/Wallpaper.jpg" />
                </image>
             </ImageView>
             <Button alignment="CENTER" layoutX="275.0" layoutY="285.0" mnemonicParsing="false" onAction="#btClassico" prefHeight="49.0" prefWidth="259.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-border-radius: 20; -fx-background-radius: 20; -fx-border-width: 3;" text="Clássico" textAlignment="CENTER" textFill="WHITE">
@@ -44,7 +44,7 @@
             </Button>
             <ImageView fitHeight="132.0" fitWidth="338.0" layoutX="255.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@logoJogo.png" />
+                  <Image url="@resources/logoJogo.png" />
                </image>
             </ImageView>
             <Circle fill="#ffcc00" layoutX="331.0" layoutY="169.0" radius="13.0" stroke="#ffcc00" strokeType="INSIDE" />
@@ -61,7 +61,7 @@
             </Button>
             <ImageView fitHeight="49.0" fitWidth="492.0" layoutX="185.0" layoutY="205.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@tituloModo.png" />
+                  <Image url="@resources/tituloModo.png" />
                </image>
             </ImageView>
          </children>
