--- a/LIG4Jogo/src/com/lig4/view/turbo_maluco.fxml
+++ b/LIG4Jogo/src/com/lig4/view/turbo_maluco.fxml
@@ -13,9 +13,9 @@
    <children>
       <Pane maxWidth="858.0" prefHeight="550.0" prefWidth="858.0" style="-fx-background-color: #0066CC; -fx-background-size: 800;">
          <children>
-            <ImageView fitHeight="572.0" fitWidth="883.0" opacity="0.04" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="590.0" fitWidth="888.0" opacity="0.04" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@wallpaper-jogo.jpg" />
+                  <Image url="@resources/Wallpaper.jpg" />
                </image>
             </ImageView>
             <Button layoutX="274.0" layoutY="292.0" mnemonicParsing="false" onAction="#btDorDeCabeca" prefHeight="52.0" prefWidth="259.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-border-radius: 20; -fx-background-radius: 20; -fx-border-width: 3;" text="Dor de cabeça" textFill="WHITE">
@@ -44,7 +44,7 @@
             </Button>
             <ImageView fitHeight="132.0" fitWidth="338.0" layoutX="255.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@logoJogo.png" />
+                  <Image url="@resources/logoJogo.png" />
                </image>
             </ImageView>
             <Circle fill="#ffcc00" layoutX="341.0" layoutY="179.0" radius="13.0" stroke="#ffcc00" strokeType="INSIDE" />
@@ -53,7 +53,7 @@
             <Circle fill="#ffcc00" layoutX="488.0" layoutY="179.0" radius="13.0" stroke="#ffcc00" strokeType="INSIDE" />
             <ImageView fitHeight="45.0" fitWidth="561.0" layoutX="134.0" layoutY="215.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@tituloMaluquice.png" />
+                  <Image url="@resources/tituloMaluquice.png" />
                </image>
             </ImageView>
          </children>
