--- a/LIG4Jogo/src/com/lig4/view/tabuleiro.fxml
+++ b/LIG4Jogo/src/com/lig4/view/tabuleiro.fxml
@@ -283,14 +283,6 @@
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
-      <Button fx:id="btSair" layoutX="754.0" layoutY="14.0" mnemonicParsing="false" onAction="#btVoltar" prefHeight="24.0" prefWidth="32.0" style="-fx-background-color: #FF1A1A;" text="X" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="15.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
       <ImageView fitHeight="39.0" fitWidth="47.0" layoutX="85.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@resources/do-utilizador%20(1).png" />
@@ -311,7 +303,7 @@
             <Font name="Trebuchet MS Bold" size="16.0" />
          </font>
       </Text>
-      <Label fx:id="nomeJogador2" layoutX="609.0" layoutY="31.0" text="Label" textAlignment="RIGHT" textFill="WHITE">
+      <Label fx:id="nomeJogador2" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="609.0" layoutY="31.0" nodeOrientation="RIGHT_TO_LEFT" text="Label" textAlignment="RIGHT" textFill="WHITE">
          <font>
             <Font name="Trebuchet MS" size="20.0" />
          </font>
@@ -321,5 +313,21 @@
             <Font name="Trebuchet MS" size="20.0" />
          </font>
       </Label>
+      <Button layoutX="739.0" layoutY="28.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="39.0" style="-fx-background-color: #FF1A1A;" textFill="WHITE">
+         <font>
+            <Font size="18.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <ImageView fitHeight="26.0" fitWidth="54.0" layoutX="746.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../../../../../Downloads/voltar.png" />
+         </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
    </children>
 </AnchorPane>
